# quick_ocr

./: .gitignore  Cargo.toml  README.md
resources/trained_data/: README.md
src/: main.rs
