[package]
name = "quickocr"
version = "0.1.0"
edition = "2021"

[dependencies]
clipboard-win = "4.5.0"
image = "0.24.7"
imageproc = "0.23.0"
rusty-tesseract = "1.1.9"
screenshots = "0.8.4"
softbuffer = { git = "https://github.com/rust-windowing/softbuffer.git" }
winit = "0.29.2"

[build]
rustflags=["-C","target-feature=+crt-static"]
